# uetools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  Makefile  README.rst  fun.py  ruff.toml  setup.py  tox.ini
.github/workflows/: publish.yml  style.yml  test.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/commands/: build.rst  cook.rst  cpp.rst  dedicated.rst  disable.rst  docs.rst  editor.rst  fmt.rst  init.rst  install.rst  local.rst  ml.rst  plugin.rst  python.rst  tests.rst  ubt.rst  vscode.rst
docs/examples/: actions.rst  extending.rst  pipeline.rst
examples/: github_action.yml  gitlab_pipeline.yml
extracted/: commandlet.txt  editor_cmd.txt  execcmd.txt  extract_ubt_config.py  format_cmd.py  params.json  params.txt  parse_params.py  ubt_xml.html
gamekit/: cli.py  conf.py  fbm.py
gamekit/commands/: __init__.py  build.py  cook.py  dedicated.py  disable.py  docs.py  editor.py  fmt.py  init.py  install.py  local.py  plugin.py  python.py  tests.py  uat.py  ubt.py  vscode.py
gamekit/coordinator/: coordinator.py  matchmaker.py  metrics.py  types.py
gamekit/generation/: from_svg.py  mdp.py
gamekit/templates/: TemplateServer.Target
tests/: conftest.py  requirements.txt  test_cli.py  test_conf.py  test_fmt.py  test_init.py  test_uetools_plugins.py
tests/editor/: test_client.py  test_dedicated.py  test_editor.py  test_editor_cook.py  test_localize.py  test_open.py  (+2 more)
uetools/: __init__.py  cli.py  command.py  conf.py  run.py
uetools/templates/PluginTemplate/{{cookiecutter.plugin_name}}/Docs/: CMakeLists.txt  Doxyfile.in  Makefile  conf.py  index.rst  requirements.txt
(+348 files in other folders)
